--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": " vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "dev:server": "ts-node-dev --respawn --transpile-only src/server.ts"
+    "dev:server": "ts-node-dev --respawn --transpile-only src/api/server.ts"
   },
   "dependencies": {
     "cors": "^2.8.5",
