update the changes

--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ MONGO_URI=mongodb+srv://vishalsaw:Vishal%40407@cluster0.yk93kmj.mongodb.net/
 DB_NAME=urlshortener
 PORT=5000
 BASE_URL=http://localhost:5000
-VITE_API_URL=https://url-shortener-api.onrender.com
+VITE_API_URL=https://pathcut-5.onrender.com
 
