--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MONGO_URI=mongodb+srv://vishalsaw:Vishal%40407@cluster0.yk93kmj.mongodb.net/
 DB_NAME=urlshortener
 PORT=5000
-BASE_URL=http://localhost:5000
+BASE_URL=https://pathcut-5.onrender.com
 VITE_API_URL=https://pathcut-5.onrender.com
 
